# uirpsoftball_api

./: .gitignore  cli.sh  deploy_to_pi.sh  deploy_to_pi_public.sh  fastapi_dev.sh  fastapi_prod.sh  pull_from_pi.sh  pull_from_pi_public.sh  pyproject.toml  uirpsoftball_api.service
src/uirpsoftball/: app.py  cli.py  config.py  custom_types.py
src/uirpsoftball/examples/config/: backend.yaml  shared.yaml
src/uirpsoftball/models/: __init__.py  tables.py
src/uirpsoftball/models/custom_field_types/: timestamp.py
src/uirpsoftball/routers/: base.py  division.py  game.py  location.py  pages.py  seeding_parameter.py  team.py  tournament.py  tournament_game.py  visit.py
src/uirpsoftball/schemas/: __init__.py  division.py  game.py  location.py  order_by.py  seeding_parameter.py  team.py  tournament.py  tournament_game.py  visit.py
src/uirpsoftball/services/: __init__.py  base.py  division.py  game.py  location.py  seeding_parameter.py  team.py  tournament.py  tournament_game.py  visit.py
