[project]
name = "uirpsoftball"
version = "0.1.0"
description = "A Python package for hosting UIRP softball league api"
authors = [
    {name = "James Kabbes",email = "james.kabbes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.24",
    "fastapi>=0.115.12",
    "dotenv (>=0.9.9,<0.10.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "isodate (>=0.7.2,<0.8.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "typer (>=0.15.4,<0.16.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

